--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,12 @@
     "react/jsx-filename-extension": ["warn", { "extensions": [".tsx"] }],
     "react/react-in-jsx-scope": "off",
     "no-use-before-define": "off",
+    "no-param-reassign": ["error", {
+      "props": true,
+      "ignorePropertyModificationsFor": [
+        "state"
+      ]
+    }],
     "@typescript-eslint/no-use-before-define": ["error"],
     "import/extensions": [
       "error",
@@ -36,6 +42,7 @@
   "settings": {
     "import/resolver": {
       "typescript": {}
-    }
+    },
+    "import/core-modules": ["@reduxjs/toolkit", "redux", "react-redux"]
   }
 }
