--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.42.0",
@@ -47,6 +48,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "react-redux": "^8.0.7",
     "typescript": "^5.1.3"
   }
 }
