ADD: husky added

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "prepare": "husky install",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
@@ -27,6 +28,12 @@
     "eject": "react-scripts eject",
     "lint": "npx eslint src/**/*.{js,jsx,ts,tsx,html}",
     "lint:fix": "npx eslint src/**/*.{js,jsx,ts,tsx,html} --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "pre-push": "npm test"
+    }
   },
   "browserslist": {
     "production": [
@@ -52,6 +59,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^5.0.0",
+    "husky": "^8.0.3",
     "react-redux": "^8.0.7",
     "typescript": "^5.1.3"
   }
